--- a/ai-trip-planner/package.json
+++ b/ai-trip-planner/package.json
@@ -13,6 +13,7 @@
     "@tabler/icons-react": "^3.35.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.27.3",
     "lucide-react": "^0.542.0",
     "motion": "^12.23.13",
     "next": "15.5.2",
