--- a/ai-trip-planner/package.json
+++ b/ai-trip-planner/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.12",
+    "@arcjet/next": "^1.0.0-beta.12",
     "@clerk/nextjs": "^6.32.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@tabler/icons-react": "^3.35.0",
