--- a/ai-trip-planner/package.json
+++ b/ai-trip-planner/package.json
@@ -13,12 +13,14 @@
     "@clerk/nextjs": "^6.32.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@tabler/icons-react": "^3.35.0",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.27.3",
     "lucide-react": "^0.542.0",
     "motion": "^12.23.13",
     "next": "15.5.2",
+    "openai": "^5.23.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1"
